--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,30 +1,36 @@
 <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-dark">
   <div class="container">
     <%= link_to "sharetango", root_path , id: "logo" %>
-    <%= link_to "Login", '#', class: "btn btn-lg btn-primary ml-auto" %>    
-    <!--<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">-->
-    <!--  <span class="navbar-toggler-icon"></span>-->
-    <!--</button>-->
-    <!--<div class="collapse navbar-collapse" id="navbarSupportedContent">-->
-    <!--  <ul class="navbar-nav ml-auto">-->
-    <!--    <li class="nav-item">-->
-    <!--      <%= link_to "HOME", '#', class: "nav-link" %>-->
-    <!--    </li>-->
-    <!--    <li class="nav-item">-->
-    <!--      <a class="nav-link" href="#">Link</a>-->
-    <!--    </li>-->
-    <!--    <li class="nav-item dropdown">-->
-    <!--      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
-    <!--        Dropdown-->
-    <!--      </a>-->
-    <!--      <div class="dropdown-menu" aria-labelledby="navbarDropdown">-->
-    <!--        <a class="dropdown-item" href="#">Action</a>-->
-    <!--        <a class="dropdown-item" href="#">Another action</a>-->
-    <!--        <div class="dropdown-divider"></div>-->
-    <!--        <a class="dropdown-item" href="#">Something else here</a>-->
-    <!--      </div>-->
-    <!--    </li>-->
-    <!--  </ul>-->
-    <!--</div>-->
+    <% if logged_in? %>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <%= link_to "HOME", root_path , class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "Test list", "#" , class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "Log out", logout_path, method: :delete , class: "nav-link" %>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Menu
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <%= link_to "Profile", current_user , class: "dropdown-item" %>
+              <%= link_to "Settings","#", class: "dropdown-item" %>
+              <!--<div class="dropdown-divider"></div>-->
+              <%= link_to "Create tests", "#",  class: "dropdown-item" %>
+            </div>
+          </li>
+        </ul>
+      </div>
+    <% else %>
+      <%= link_to "Login", login_path , class: "btn btn-lg btn-primary ml-auto" %>    
+    <% end %>
   </div>
 </nav>
